--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ out/
 # release/
 
 # Gradle files
+gradle/
 .gradle/
 build/
 
@@ -37,6 +38,7 @@ proguard/
 captures/
 
 # IntelliJ
+.idea/
 *.iml
 .idea/workspace.xml
 .idea/tasks.xml
@@ -52,8 +54,9 @@ captures/
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
-#*.keystore
+*.jks
+*.keystore
+keystore.properties
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
