--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
         }
@@ -59,11 +59,21 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
 
+    // Moquette
     implementation 'io.moquette:moquette-netty-parser:0.9'
     implementation 'io.moquette:moquette-broker:0.15'
     implementation 'io.moquette:moquette-parser-commons:0.8.1'
-    implementation 'log4j:log4j:1.2.17'
 
+    implementation 'log4j:log4j:1.2.17'
+    implementation 'io.projectreactor.netty:reactor-netty:1.0.14'
+    implementation 'org.eclipse.jetty.npn:npn-api:8.1.2.v20120308'
+    implementation 'org.eclipse.jetty.alpn:alpn-api:1.1.3.v20160715'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'com.jcraft:jzlib:1.1.3'
+    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+    implementation 'org.conscrypt:conscrypt-android:2.5.2'
+
+    // Eclipse paho mqtt client
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 
